force-app/main/default/objects/VRT_Vehicle__c/VRT_Vehicle__c.object-meta.xml
<CustomObject>
    <description>Medio de transporte a alquilar.</description>
    <label>Vehículo</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Vehículo Number.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehículos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>