force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_DAT_ManufacturedYear__c.field-meta.xml
<CustomField>
    <fullName>VRT_DAT_ManufacturedYear__c</fullName>
    <description>Campo para introducir 
el año de fabricación del 
vehículo.</description>
    <label>Año de fabricación</label>
    <type>Date</type>
</CustomField>