force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_FLG_Available__c.field-meta.xml
<CustomField>
    <fullName>VRT_FLG_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo checkbox para 
indicar si el vehículo 
está disponible para 
alquiler en un momento 
determinado.</description>
    <label>Disponible</label>
    <type>Checkbox</type>
</CustomField>