force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_NUM_Mileage__c.field-meta.xml
<CustomField>
    <fullName>VRT_NUM_Mileage__c</fullName>
    <description>Campo decimal para 
registrar el número de 
kilómetros recorridos 
por el vehículo.</description>
    <label>Kilometraje</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>