force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_TXT_Color__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Color__c</fullName>
    <description>Campo de texto para 
introducir el color del 
vehículo.</description>
    <label>Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>