force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_TXT_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_ExternalId__c</fullName>
    <description>Es un campo para 
almacenar 
identificadores únicos 
procedentes de 
sistemas externos.</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>