force-app/main/default/objects/VRT_Vehicle__c/fields/VRT_TXT_Model__c.field-meta.xml
<CustomField>
    <fullName>VRT_TXT_Model__c</fullName>
    <description>Campo para introducir 
el modelo del vehículo.</description>
    <label>Modelo</label>
    <length>150</length>
    <type>Text</type>
</CustomField>