force-app/main/default/objects/VRT_Vehicle__c/validationRules/VRT_EvitarKmNegativo_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_EvitarKmNegativo_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla de validación asegura que 
el kilometraje del vehículo no sea 
negativo.</description>
    <errorConditionFormula>VRT_NUM_Mileage__c &lt; 0</errorConditionFormula>
    <errorMessage>El kilometraje no puede 
ser negativo.</errorMessage>
</ValidationRule>