force-app/main/default/objects/VRT_Vehicle__c/validationRules/VRT_ManufacturedYear_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_ManufacturedYear_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla de validación garantiza 
que el año de fabricación del 
vehículo no sea en el futuro.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(VRT_DAT_ManufacturedYear__c)),
  YEAR(VRT_DAT_ManufacturedYear__c) &gt; YEAR(TODAY())
)</errorConditionFormula>
    <errorMessage>El año de fabricación 
no puede ser superior 
al año actual.</errorMessage>
</ValidationRule>