force-app/main/default/objects/VRT_Vehicle__c/validationRules/VRT_PasajerosNegativo_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>VRT_PasajerosNegativo_ValidationRule</fullName>
    <active>true</active>
    <description>Esta regla de validación asegura que 
el número de pasajeros máximo del 
vehículo no sea negativo.</description>
    <errorConditionFormula>VRT_NUM_Passengers__c &lt; 0</errorConditionFormula>
    <errorMessage>El número de pasajeros 
no puede ser negativo.</errorMessage>
</ValidationRule>