force-app/main/default/objects/VRT_Vehicle__c/listViews/VRT_AvailableVehicles_List.listView-meta.xml
<ListView>
    <fullName>VRT_AvailableVehicles_List</fullName>
    <columns>NAME</columns>
    <columns>VRT_TXT_Brand__c</columns>
    <columns>VRT_TXT_LicensePlate__c</columns>
    <columns>VRT_TXT_Model__c</columns>
    <columns>VRT_SEL_EnergyType__c</columns>
    <columns>VRT_TXT_Color__c</columns>
    <columns>VRT_SEL_Condition__c</columns>
    <columns>VRT_NUM_Mileage__c</columns>
    <columns>VRT_NUM_Passengers__c</columns>
    <columns>VRT_SEL_VehicleType__c</columns>
    <columns>VRT_FLG_Available__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>VRT_FLG_Available__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Vehículos Disponibles</label>
</ListView>